# Little-Chat

./: README.md
app/chat/: CMakeLists.txt  chat-gpt-mqtt-client3.py  onenet.py  todo.txt  tuling.py
app/chat-ui/: CMakeLists.txt
app/chat-ui/src/: TXT_Viewer.c  TXT_Viewer.h  freetype_draw.c  main.cpp
app/chat/asr/: CMakeLists.txt  asr.cpp  asr.h  common.cpp  common.h
app/chat/audiorecorder/: CMakeLists.txt  audio_rec.cpp  audio_rec.h
app/chat/include/: main.h
app/chat/json/: CMakeLists.txt
app/chat/mqtt-client/: CMakeLists.txt  mqtt-client.h
app/chat/paho-mqtt-c-1.3.12/lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.12  libpaho-mqtt3c.so.1
app/chat/pocketsphinx/examples/include/pocketsphinx/: sphinx_config.h
app/chat/src/: CMakeLists.txt  main.cpp  offline_wkup.cpp  offline_wkup.h  timer.cpp  timer.h
app/chat/tts/: CMakeLists.txt  tts.cpp  tts.h  tts_common.cpp  tts_common.h
system/packimg/: Readme.md  pack.sh
system/packimg/data/: .Readme.md.swp
system/rootfs/etc/: asound.conf  fstab  group  group-  gshadow  gshadow-  hostname  ld.so.cache  mailcap  passwd  resolv.conf  shadow  subuid  wpa_supplicant.conf
system/rootfs/root/: .bash_history  .viminfo
system/u-boot/: .config  .u-boot-dtb.bin.cmd  .u-boot-dtb.img.cmd  .u-boot-nodtb.bin.cmd  .u-boot-sunxi-with-spl.bin.cmd  .u-boot.bin.cmd  .u-boot.cmd  .u-boot.img.cmd  .u-boot.lds.cmd  .u-boot.srec.cmd  .u-boot.sym.cmd  0001-v2020.07.3.patch  System.map  image.map  u-boot  u-boot.cfg  u-boot.cfg.configs  u-boot.dtb.out  u-boot.img  u-boot.lds  u-boot.map  u-boot.srec  u-boot.sym
system/u-boot/cmd/: .bdinfo.o.cmd  .blk_common.o.cmd  .blkcache.o.cmd  .boot.o.cmd  .bootm.o.cmd  .bootz.o.cmd  .built-in.o.cmd  .console.o.cmd  .disk.o.cmd  .dm.o.cmd  .echo.o.cmd  .elf.o.cmd  .exit.o.cmd  .ext2.o.cmd  .ext4.o.cmd  .fastboot.o.cmd  .fat.o.cmd  .fdt.o.cmd  .fs.o.cmd  .gpio.o.cmd  .gpt.o.cmd  .help.o.cmd  .itest.o.cmd  .legacy-mtd-utils.o.cmd  .load.o.cmd  .mem.o.cmd  .misc.o.cmd  .mmc.o.cmd  .nvedit.o.cmd  .part.o.cmd  .pxe_utils.o.cmd  .setexpr.o.cmd  .sf.o.cmd  .source.o.cmd  .spi.o.cmd  .sysboot.o.cmd  .test.o.cmd  .usb.o.cmd  .usb_mass_storage.o.cmd  .version.o.cmd  (+42 more)
system/u-boot/common/: .autoboot.o.cmd  .board_f.o.cmd  .board_r.o.cmd  .bootm.o.cmd  .bootm_os.o.cmd  .built-in.o.cmd  .cli.o.cmd  .cli_hush.o.cmd  .cli_readline.o.cmd  .cli_simple.o.cmd  .command.o.cmd  .console.o.cmd  .dlmalloc.o.cmd  .exports.o.cmd  .fdt_support.o.cmd  .hash.o.cmd  .image-android-dt.o.cmd  .image-android.o.cmd  .image-fdt.o.cmd  .image-fit.o.cmd  .image.o.cmd  .iomux.o.cmd  .main.o.cmd  .malloc_simple.o.cmd  .memsize.o.cmd  .menu.o.cmd  .s_record.o.cmd  .splash.o.cmd  .stdio.o.cmd  .usb.o.cmd  .usb_hub.o.cmd  .usb_kbd.o.cmd  .usb_storage.o.cmd  .xyzModem.o.cmd  autoboot.c  (+31 more)
(+1004 files in other folders)
